# media-analyser

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  ci.yml
benches/: calculator.benchmark.cpp
cmake/: calculatorConfig.cmake
cmake/presets/: CMakeDarwinPresets.json  CMakeGenericPresets.json  CMakeLinuxPresets.json  CMakeWindowsPresets.json
docs/: code_guidelines.md  instructions.md  media_decoder_design.md  mp3_analyser_design.md  naming_conventions.md
include/: calculator.hpp  file_loader.hpp  logger.hpp  media_analyser.hpp  media_decoder.hpp  media_types.hpp
src/: calculator.cpp  file_loader.cpp  logger.cpp  main.cpp  media_analyser.cpp  media_decoder.cpp
tests/integration/: calculator.itest.cpp  file_loader.itest.cpp  media_analyser.itest.cpp
tests/unit/: calculator.utest.cpp  logger.utest.cpp  media_analyser.utest.cpp  media_decoder.utest.cpp
